# tiramisu-autoscheduler

./: CMakeLists.txt  LICENSE  README.md
include/: ast.h  auto_scheduler.h  buffer.h  computation.h  core.h  dnn_accesses.h  evaluator.h  function.h  optimization_info.h  schedules_generator.h  sdfg_wrapper.h  search_method.h  utils.h
model/: hier_lstm.py  json_to_tensor.py  main.py
python_bindings/: PyDaisyTiramisu.cpp
src/: ast.cpp  auto_scheduler.cpp  buffer.cpp  computation.cpp  core.cpp  dnn_accesses.cpp  evaluator.cpp  function.cpp  optimization_info.cpp  schedules_generator.cpp  sdfg_wrapper.cpp  search_method.cpp
test/: CMakeLists.txt  unittests.cpp
test/data/: copy_kernel.sdfg  hdiff.sdfg  matmul.sdfg
test/unittests/: auto_schedule_test.cpp  function_test.cpp  model_test.cpp  sdfg_test.cpp
